--- a/pancakr.html
+++ b/pancakr.html
@@ -7,13 +7,13 @@
 
 </head>
 
-<bode>
+<body>
 
 <p><strong>Learn how to make Old-Fashioned Pancakes Recipe!</strong></p>
 
 <h1>Ingredients</h1>
 
-<img src=”https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F17%2F21014-Good-old-Fashioned-Pancakes-mfs_002.jpg”>
+<img src=”https://thumbs.dreamstime.com/b/pancakes-breakfast-setting-delicious-morning-39883245.jpg”>
 
 <!-- create an unordered list -->
 
